<resources>
    <string name="app_name">Connectivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="title_activity_time_line">TimeLine</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_timeline">Conactivity</string>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_new_post">Post to ConActivity</string>
    <string name="title_activity_create_new_msg">Compose a Message</string>
    <string name="title_activity_search_friends">Search and Add Friends</string>
    <string name="str_post">POST</string>
    <string name="str_send">SEND</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
