<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_art_track_black_24dp"
        android:title="@string/title_timeline" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_messages"
        android:title="@string/title_messages" />

</menu>
